--- a/docs/С чего начать/Главная информация для Игроков.md
+++ b/docs/С чего начать/Главная информация для Игроков.md
@@ -4,7 +4,7 @@
 
 Скорее всего при создании и согласования персонажа проблем не возникнет. Однако, всё же, прочитай пожалуйста следующие странички:
 
-* [[Базовые книги|Используемые книги]]
+* [Используемые книги](Базовые%20книги)
 
 ## Базовая информация
 
