--- a/docs/С чего начать/Базовые книги.md
+++ b/docs/С чего начать/Базовые книги.md
@@ -1,19 +1,36 @@
-Для разработки вселенной в основном (но не только) я опирался на следующие книги:  
-## Книга Игрока
-![[PHB_cover.png]]
-## Руководство Мастера
-![[DMG_cover.jpg]]
-## Бестиарий
-![[MonsterManual_cover.jpg]]
-## Котёл Таши со всякой всячиной
-![[Tashas_cover.png]]
-## Руководство Занатара обо всём
+Для разработки вселенной в основном (но не только) я опирался на следующие книги
+
+## Книги
+
+### Книга Игрока
+
+![[PHB_cover.png]]  
+
+### Руководство Мастера
+
+![[DMG_cover.jpg]]  
+
+### Бестиарий
+
+![[MonsterManual_cover.jpg]]  
+
+### Котёл Таши со всякой всячиной
+
+![[Tashas_cover.png]]  
+
+### Руководство Занатара обо всём
+
 ![[Xanathar_cover.png]]  
+
 ## Что это значит?
-Это означает, что
+
+Это означает, что  
+
 1. Мир проработан с учётом содержания данных книг.
 2. Ты можешь использовать любые классы/расы/черты/заклинания/т.п. из этих книг в Фезатле.
+
 ## Я хочу предложить контент из других книг/свой контент
+
 Если ты хочешь использовать контент, не входящий в перечисленные книги, обязательно **спроси разрешения у мастера**! Мастер проверит, насколько подходит твоя идея к концепции вселенной, и проинформирует тебя о своём решении.  
 
 Не нужно стесняться! Да, не каждая идея найдет своё место в Фезатле, но предложить лучше, чем не предлагать!
