--- a/docs/С чего начать/Главная информация для Игроков.md
+++ b/docs/С чего начать/Главная информация для Игроков.md
@@ -2,24 +2,24 @@
 
 ## Создание персонажа
 
-Скорее всего при создании и согласования персонажа проблем не возникнет. Однако, всё же, прочитай пожалуйста следующие странички:
+Скорее всего при создании и согласования персонажа проблем не возникнет. Однако, всё же, прочитай пожалуйста следующие странички:  
 
-* [Используемые книги](Базовые%20книги)
+- [[Базовые книги|Используемые книги]]
 
 ## Базовая информация
 
-* Магия в Фезатле
-* Карта Фезатла
-* Население
-* Известные фракции и организации
-* [[Божества и религии]]
+- Магия в Фезатле
+- Карта Фезатла
+- Население
+- Известные фракции и организации
+- [[Божества и религии]]
 
 ## История мира
 
-* [[Исторические события]]
-* Легенды
-* Выдающиеся личности
+- [[Исторические события]]
+- Легенды
+- Выдающиеся личности
 
 ## Кое-что ещё
 
-* Планы существования
+- Планы существования
