Add info about playable races

--- a/docs/С чего начать/Главная информация для Игроков.md
+++ b/docs/С чего начать/Главная информация для Игроков.md
@@ -5,6 +5,7 @@
 Скорее всего при создании и согласования персонажа проблем не возникнет. Однако, всё же, прочитай пожалуйста следующие странички:  
 
 - [[Базовые книги|Используемые книги]]
+- [[Список игровых рас|Игровые расы]]
 
 ## Базовая информация
 
